--- a/templates/article/list/article_detail.html
+++ b/templates/article/list/article_detail.html
@@ -1,22 +1,105 @@
 {% extends 'article/base.html' %}
 {% load staticfiles %}
-
+{% load article_tags %}
 
 {% block title%}article detail{% endblock %}
 {% block content %}
-    <div>
-        <header>
-            <h1>{{ article.title }}</h1>
-            <p>
-                <span>{{ article.author }}</span>
-                <span>{{ article.created }}</span>
-            </p>
-        </header>
-        <link rel="stylesheet" type="text/css" href="{% static 'editor/css/editormd.preview.css' %}">
-        <div id="editormd-view">
-            <textarea name="" id="append-test" style="display: none;">{{ article.body}}</textarea>
+<div class="container">
+    <div class="col-md-9">
+        {% with total_likes=article.users_like.count users_like=article.users_like.all %}
+        <div>
+            <header>
+                <h1>{{ article.title }}</h1>
+                <p>
+                    <span>{{ article.author }}</span>
+                    <span>{{ article.created }}</span>
+                    <span style="margin-left:20px" class="glyphicon glyphicon-thumbs-up">{{ total_likes}} like{{ total_likes | pluralize }}</span>
+                    <span style="margin-left:20px">{{total_views}}view{{ total_views|pluralize }}</span>
+                </p>
+            </header>
+            <link rel="stylesheet" type="text/css" href="{% static 'editor/css/editormd.preview.css' %}">
+            <div id="editormd-view">
+                <textarea name="" id="append-test" style="display: none;">{{ article.body}}</textarea>
+            </div>
+            <div>
+                <p class="text-center">
+                    <a onclick="like_article({{ article.id}}, 'like')" href="#">
+                        <span class="glyphicon glyphicon-thumbs-up"> like</span>
+                    </a>
+                    <a onclick="like_article({{ article.id}}, 'unlike')" href="#">
+                        <span class="glyphicon glyphicon-thumbs-down"> unlike</span>
+                    </a>
+                </p>
+            </div>
+            <div>
+                <p class="text-center"><strong>点赞本文的作者</strong></p>
+                {% for user in article.users_like.all %}
+                <p class="text-center"><span>{{ user.username }}</span></p>
+                {% empty %}
+                <p class="text-center">还没有人对此文章进行表态</p>
+                {% endfor %}
+            </div>
+        </div>
+        <hr>
+        <div>
+            <h3><span class="glyphicon glyphicon-bullhorn"></span>本文有{{ comments.count }}评论</h3>
+            {% for comment in article.comment.all %}
+            <div>
+                <p><strong>{{ comment.commentator }}</strong>说:</p>
+                <p style="margin-left:40px;">{{ comment.body }}</p>
+            </div>
+            {% empty %}
+            <p>没有评论</p>
+            {% endfor %}
+            <h3><span class="glyphicon glyphicon-send"></span>看文章,发评论，不要沉默</h3>
+            <form class="form-horizontal" action="." method="post" role="form">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="" class="col-sm-2 control-label" for="inputEmail3">评论员</label>
+                    <div class="col-sm-10">
+                        {{ comment_form.commentator }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-2 control-label" for="inputEmail3">评论</label>
+                    <div class="col-sm-10">
+                        {{ comment_form.body }}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <p>
+                            <input type="submit" name="" value="发评论" class="btn btn-primary">
+                        </p>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
+    <div class="col-md-3">
+        <p class="text-center"><h3>最受欢迎的文章</h3></p>
+        <ol>
+            {% for article_ranking in most_viewed %}
+            <li>
+                <a href="{{ article_rank.get_url_path }}">{{ article_ranking.title }}</a>
+            </li>
+            {% endfor %}
+        </ol>
+        <hr>
+        <p class="text-center"><h3>最新的文章</h3></p>
+        {% latest_articles 4 %}
+        <hr>
+        <p class="text-center"><h3>最多评论的文章</h3></p>
+        {% most_commented_articles as most_comments %}
+        <ul>
+            {% for comment_article in most_comments %}
+            <li>
+                <a href="{{ comment_article.get_url_path }}">{{ comment_article.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 <script src='{% static "js/jquery.js" %}'></script>
 <script src='{% static "editor/lib/marked.min.js" %}'></script>
 <script src='{% static "editor/lib/prettify.min.js" %}'></script>
@@ -26,7 +109,7 @@
 <script src='{% static "editor/lib/flowchart.min.js" %}''></script>
 <script src='{% static "editor/lib/jquery.flowchart.min.js" %}'></script>
 <script src='{% static "editor/editormd.js" %}'></script>
-
+<script src="{% static 'js/layer.js' %}"></script>
 <script type="text/javascript">
 $(function(){
     editormd.markdownToHTML("editormd-view", {
@@ -38,5 +121,22 @@ $(function(){
         sequenceDiagram : true,  // 默认不解析
     });
 });
+function like_article(id, action){
+    $.ajax({
+        url: "{% url 'article:like_article' %}",
+        type:"POST",
+        data:{'id':id, "action":action},
+        success: function(e){
+            if(e == '1'){
+                layer.msg('感谢点赞');
+                window.location.reload();
+            }else{
+                layer.msg("我会继续努力的");
+                window.location.reload();
+            }
+        },
+    });
+}
 </script>
+{% endwith %}
 {% endblock %}
