--- a/templates/article/leftslider.html
+++ b/templates/article/leftslider.html
@@ -3,5 +3,7 @@
         <p><a href="{% url 'article:article_column' %}">栏目管理</a></p>
         <p><a href="{% url 'article:article_post' %}">发布文章</a></p>
         <p><a href="{% url 'article:article_list' %}">文章列表</a></p>
+        <p><a href="{% url 'article:article_tag' %}">文章标签</a></p>
+        <p><a href="{% url 'image:list_image' %}">图片管理</a></p>
     </div>
 </div>
