--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,7 @@
             <ul class="navbar-nav nav" role='navigation'>
                 <li><a href="{% url 'home' %}">首页</a></li>
                 <li><a href="{% url 'article:article_titles' %}">文章</a></li>
+                <li><a href="{% url 'image:list_image' %}">图片管理</a></li>
             </ul>
             <ul class="navbar-right nav navbar-nav">
                 {% if user.is_authenticated %}
